--- a/lib/l10n/intl_ml.arb
+++ b/lib/l10n/intl_ml.arb
@@ -180,5 +180,13 @@
   "hideRelatedVideosFromWatchScreen": "വാച്ച് സ്ക്രീനിൽ നിന്ന് അനുബന്ധ വീഡിയോകൾ മറയ്ക്കുക",
   "@hideRelatedVideosFromWatchScreen": {
     "description": "Hide the related videos from video streaming screen."
+  },
+  "share": "പങ്കിടുക",
+  "@share": {
+    "description": "Share label."
+  },
+  "includeTitle": "ശീർഷകം ഉൾപ്പെടുത്തുക",
+  "@includeTitle": {
+    "description": "Include title along with url"
   }
 }
