instance selection added

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -188,5 +188,6 @@
   "includeTitle": "Include title",
   "@includeTitle": {
     "description": "Include title along with url"
-  }
+  },
+  "instances": "Instances"
 }
