--- a/lib/l10n/intl_ml.arb
+++ b/lib/l10n/intl_ml.arb
@@ -188,5 +188,6 @@
   "includeTitle": "ശീർഷകം ഉൾപ്പെടുത്തുക",
   "@includeTitle": {
     "description": "Include title along with url"
-  }
+  },
+  "instances": "Instances"
 }
