--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -189,5 +189,6 @@
   "@includeTitle": {
     "description": "Include title along with url"
   },
-  "instances": "实例"
+  "instances": "实例",
+  "switchRegion": "Please consider switching to a different region for better results."
 }
