Update source file intl_en.arb

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -189,5 +189,9 @@
   "@includeTitle": {
     "description": "Include title along with url"
   },
-  "instances": "Instances"
+  "instances": "Instances",
+  "switchRegion": "Please consider switching to a different region for better results.",
+  "swipeDownToDismissDisabled": "'Swipe down to dismiss' disabled",
+  "swipeUpToDismissEnabled": "'Swipe up to dismiss' enabled",
+  "noCommentsFound": "No Comments Found"
 }
