--- a/lib/l10n/intl_ml.arb
+++ b/lib/l10n/intl_ml.arb
@@ -193,5 +193,6 @@
   "switchRegion": "മികച്ച ഫലങ്ങൾക്കായി ദയവായി വ്യത്യസ്തമായ ഒരു പ്രദേശത്തിലേക്ക് മാറുന്നതു പരിഗണിക്കുക.",
   "swipeDownToDismissDisabled": "'സ്വൈപ്പ് ഡൗൺ ചെയ്ത് ഡിസ്മിസ് ചെയ്യൽ' പ്രവർത്തനരഹിതമാക്കിയിരിക്കുന്നു",
   "swipeUpToDismissEnabled": "'സ്വൈപ്പ് അപ്പ് ചെയ്ത് ഡിസ്മിസ് ചെയ്യൽ' പ്രവർത്തന സജ്ജമാക്കിയിരിക്കുന്നു",
-  "noCommentsFound": "അഭിപ്രായങ്ങൾ ലഭ്യമല്ല."
+  "noCommentsFound": "അഭിപ്രായങ്ങൾ ലഭ്യമല്ല.",
+  "disablePipPlayer": "Disable PIP player"
 }
