--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -193,5 +193,6 @@
   "switchRegion": "Please consider switching to a different region for better results.",
   "swipeDownToDismissDisabled": "'Swipe down to dismiss' disabled",
   "swipeUpToDismissEnabled": "'Swipe up to dismiss' enabled",
-  "noCommentsFound": "No Comments Found"
+  "noCommentsFound": "No Comments Found",
+  "disablePipPlayer": "Disable PIP player"
 }
