--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -193,6 +193,5 @@
   "switchRegion": "Please consider switching to a different region for better results.",
   "swipeDownToDismissDisabled": "'Swipe down to dismiss' disabled",
   "swipeUpToDismissEnabled": "'Swipe up to dismiss' enabled",
-  "noCommentsFound": "No Comments Found",
-  "disablePipPlayer": "Disable PIP player"
+  "noCommentsFound": "No Comments Found"
 }
