--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,196 +1,196 @@
 {
-  "home": "Главная",
+  "home": "الرئيسية",
   "@home": {
     "description": "Home label"
   },
-  "trending": "Тренды",
+  "trending": "شائع",
   "@trending": {
     "description": "Trending label"
   },
-  "saved": "Сохранено",
+  "saved": "المحفوظات",
   "@saved": {
     "description": "Saved label"
   },
-  "settings": "Настройки",
+  "settings": "الإعدادات",
   "@settings": {
     "description": "Settings label"
   },
-  "history": "История",
+  "history": "التاريخ",
   "@history": {
     "description": "History label"
   },
-  "savedVideosTitle": "Сохранённые видео",
+  "savedVideosTitle": "الفيديوهات المحفوظة",
   "@savedVideosTitle": {
     "description": "Saved videos app bar title"
   },
-  "noUploaderName": "Безымянный",
+  "noUploaderName": "بدون اسم",
   "@noUploaderName": {
     "description": "There is no uploader (channel) name available"
   },
-  "noVideoTitle": "Неназванное",
+  "noVideoTitle": "بلا عنوان",
   "@noVideoTitle": {
     "description": "There is no video title available"
   },
-  "videoViews": "{count, plural, =0{Нет просмотров} =1{просмотр} few{просмотра} many{просмотров} other{просмотра}}",
+  "videoViews": "{count, plural, zero {} one {مشاهدتين} two {مشاهدات} few {مشاهدات} many {مشاهدات}=0{لا مشاهدات} =1{مشاهدة} other{مشاهدات}}",
   "@videoViews": {
     "description": "{number} views"
   },
-  "channelSubscribers": "{count, plural, =0{Нет подписчиков} =1{подписчик} few{подписчика} many{подписчиков} other{подписчика}}",
+  "channelSubscribers": "{count, plural, zero {} one {مشتركين} two {مشتركين} few {مشتركين} many {مشتركين}=0{لا مشتركين} =1{مشترك} other{مشتركين}}",
   "@channelSubscribers": {
     "description": "{number} subscribers"
   },
-  "subscribe": "Подписаться",
+  "subscribe": "اشتراك",
   "@subscribe": {
     "description": "Subscribe button label"
   },
-  "noUploadDate": "Без даты",
+  "noUploadDate": "بلا تاريخ",
   "@noUploadDate": {
     "description": "There is no video upload date available"
   },
-  "thereIsNoSavedVideos": "Сохранённых видео нет",
+  "thereIsNoSavedVideos": "لا يوجد فيديوهات محفوظة",
   "@thereIsNoSavedVideos": {
     "description": "There are no saved videos found"
   },
-  "thereIsNoSavedOrHistoryVideos": "Сохранённых/просмотренных видео нет",
+  "thereIsNoSavedOrHistoryVideos": "لا يوجد فيديوهات/تاريخ محفوظ",
   "@thereIsNoSavedHistoryVideos": {
     "description": "There are no saved or history videos"
   },
-  "noVideoAvailableChangedToHls": "Нет доступных форматов, переход на HLS",
+  "noVideoAvailableChangedToHls": "لا يوجد مصدر للفيديو، تغير أوتوماتيكيا إلى المباشر",
   "@noVideoAvailableChangedToHls": {
     "description": "When there is no standard player link available, then it changed to hls player"
   },
-  "unknownQuality": "Качество не опознано",
+  "unknownQuality": "جودة غير محددة",
   "@unknownQuality": {
     "description": "Quality name not found"
   },
-  "hlsPlayer": "Проигрыватель HLS",
+  "hlsPlayer": "مشغل المباشر",
   "@hlsPlayer": {
     "description": "Hls player label"
   },
-  "enableHlsPlayerDescription": "Переключит на проигрыватель HLS, поддерживающий больше форматов. Отключите при ошибках.",
+  "enableHlsPlayerDescription": "شغل مشغل المباشر لتفعيل كل اختيارات الجودة، عطله عند ظهور أي أخطاء.",
   "@enableHlsPlayerDescription": {
     "description": "Enabling HLS player may slow down performance but unlocks all quality options. Disable this setting if errors occur."
   },
-  "disableVideoHistory": "Отключить историю просмотров",
+  "disableVideoHistory": "عطل تاريخ المشاهدة",
   "@disableVideoHistory": {
     "description": "Hide watch history"
   },
-  "retrieveDislikes": "Вернуть дизлайки",
+  "retrieveDislikes": "أظهر عدم الإعجابات",
   "@retrieveDislikes": {
     "description": "Retrieve dislikes label"
   },
-  "retrieveDislikeCounts": "Запрашивать количество дизлайков",
+  "retrieveDislikeCounts": "أظهر عدد عدم الإعجابات",
   "@retrieveDislikeCounts": {
     "description": "Return the dislike button of videos"
   },
-  "noVideoDescription": "Без описания",
+  "noVideoDescription": "لا يوجد وصف",
   "@noVideoDescription": {
     "description": "There is no video description available"
   },
-  "relatedTitle": "Похожие",
+  "relatedTitle": "مرتبط",
   "@relatedTitle": {
     "description": "Related videos label"
   },
-  "commentAuthorNotFound": "Не найден",
+  "commentAuthorNotFound": "غير متاح",
   "@commentAuthorNotFound": {
     "description": "Name of the comment author is not found"
   },
-  "readMoreText": "Раскрыть",
+  "readMoreText": "اقرأ المزيد",
   "@readMoreText": {
     "description": "Expand the comment text"
   },
-  "showLessText": "Скрыть",
+  "showLessText": "إظهار أقل",
   "@showLessText": {
     "description": "Collapse the comment text"
   },
-  "commonSettingsTitle": "Общие",
+  "commonSettingsTitle": "شائع",
   "@commonSettingsTitle": {
     "description": "Common settings label"
   },
-  "language": "Язык",
+  "language": "اللغة",
   "@language": {
     "description": "Language label"
   },
-  "region": "Регион",
+  "region": "المنطقة",
   "@region": {
     "description": "Region label"
   },
-  "theme": "Оформление",
+  "theme": "المظهر",
   "@theme": {
     "description": "Theme label"
   },
-  "developer": "Разработчик",
+  "developer": "المطور",
   "@developer": {
     "description": "Developer label"
   },
-  "translators": "Переводчики",
+  "translators": "المترجمين",
   "@translators": {
     "description": "Translators label"
   },
-  "version": "Версия",
+  "version": "النسخة",
   "@version": {
     "description": "Version label"
   },
-  "about": "О приложении",
+  "about": "حول",
   "@about": {
     "description": "About label"
   },
-  "video": "Видео",
+  "video": "فيديو",
   "@video": {
     "description": "Video label"
   },
-  "unknown": "неизвестно",
+  "unknown": "غير معرف",
   "@unknown": {
     "description": "Unknown label"
   },
-  "defaultQuality": "Качество по умолчанию",
+  "defaultQuality": "الجودة الافتراضية",
   "@defaultQuality": {
     "description": "Default video quality label"
   },
-  "retry": "Повторить",
+  "retry": "إعادة المحاولة",
   "@retry": {
     "description": "Retry label"
   },
-  "repliesPlural": "{count, plural, =1{ответ} other{ответа}}",
+  "repliesPlural": "{count, plural, zero {} one {تعليقات} two {تعليقات} few {تعليقات} many {تعليقات}=1{تعليق} other{تعليقات}}",
   "@repliesPlural": {
     "description": "{number} Replies"
   },
-  "canada": "Канада",
-  "france": "Франция",
-  "india": "Индия",
-  "netherlands": "Нидерланды",
-  "unitedKingdom": "Соединённое королевство",
-  "unitedStates": "Соединённые штаты Америки",
-  "distractionFree": "Отсекая лишнее",
+  "canada": "كندا",
+  "france": "فرنسا",
+  "india": "الهند",
+  "netherlands": "هولندا",
+  "unitedKingdom": "المملكة المتحدة",
+  "unitedStates": "الولايات المتحدة",
+  "distractionFree": "بلا تشتت",
   "@distractionFree": {
     "description": "A section for control distracting elements."
   },
-  "hideComments": "Скрыть коментарии",
+  "hideComments": "إخفاء التعليقات",
   "@hideComments": {
     "description": "Hide Comments label."
   },
-  "hideCommentsButtonFromWatchScreen": "Убирает кнопку показа коментариев с экрана просмотра.",
+  "hideCommentsButtonFromWatchScreen": "إخفاء زر التعليقات من شاشة المشاهدة.",
   "@hideCommentsButtonFromWatchScreen": {
     "description": "Hide the comment button from video streaming screen."
   },
-  "hideRelated": "Скрыть похожие",
+  "hideRelated": "إخفاء المرتبط",
   "@hideRelated": {
     "description": "Hide Related videos label."
   },
-  "hideRelatedVideosFromWatchScreen": "Убирает ленту похожих видео с экрана просмотра.",
+  "hideRelatedVideosFromWatchScreen": "إخفاء الفيديوهات المرتبطة من شاشة المشاهدة",
   "@hideRelatedVideosFromWatchScreen": {
     "description": "Hide the related videos from video streaming screen."
   },
-  "share": "Поделиться",
+  "share": "مشاركة",
   "@share": {
     "description": "Share label."
   },
-  "includeTitle": "Включая название",
+  "includeTitle": "تضمين العنوان",
   "@includeTitle": {
     "description": "Include title along with url"
   },
-  "instances": "Зеркала",
-  "switchRegion": "Возможно, стоит сменить регион, чтобы улучшить результат.",
+  "instances": "فوريات",
+  "switchRegion": "من فضلك غير المنطقة لنتائج فُضْلى.",
   "swipeDownToDismissDisabled": "'Swipe down to dismiss' disabled",
   "swipeUpToDismissEnabled": "'Swipe up to dismiss' enabled",
   "noCommentsFound": "No Comments Found",
