--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,196 +1,196 @@
 {
-  "home": "Главная",
+  "home": "홈",
   "@home": {
     "description": "Home label"
   },
-  "trending": "Тренды",
+  "trending": "인기 급상승",
   "@trending": {
     "description": "Trending label"
   },
-  "saved": "Сохранено",
+  "saved": "저장 사항",
   "@saved": {
     "description": "Saved label"
   },
-  "settings": "Настройки",
+  "settings": "설정",
   "@settings": {
     "description": "Settings label"
   },
-  "history": "История",
+  "history": "기록",
   "@history": {
     "description": "History label"
   },
-  "savedVideosTitle": "Сохранённые видео",
+  "savedVideosTitle": "저장한 동영상",
   "@savedVideosTitle": {
     "description": "Saved videos app bar title"
   },
-  "noUploaderName": "Безымянный",
+  "noUploaderName": "이름 없음",
   "@noUploaderName": {
     "description": "There is no uploader (channel) name available"
   },
-  "noVideoTitle": "Неназванное",
+  "noVideoTitle": "제목 없음",
   "@noVideoTitle": {
     "description": "There is no video title available"
   },
-  "videoViews": "{count, plural, =0{Нет просмотров} =1{просмотр} few{просмотра} many{просмотров} other{просмотра}}",
+  "videoViews": "{count, plural, =0{조회수 없음} =1{조회수} other{조회수}}",
   "@videoViews": {
     "description": "{number} views"
   },
-  "channelSubscribers": "{count, plural, =0{Нет подписчиков} =1{подписчик} few{подписчика} many{подписчиков} other{подписчика}}",
+  "channelSubscribers": "{count, plural, =0{구독자 없음} =1{구독자} other{구독자}}",
   "@channelSubscribers": {
     "description": "{number} subscribers"
   },
-  "subscribe": "Подписаться",
+  "subscribe": "구독",
   "@subscribe": {
     "description": "Subscribe button label"
   },
-  "noUploadDate": "Без даты",
+  "noUploadDate": "날짜 없음",
   "@noUploadDate": {
     "description": "There is no video upload date available"
   },
-  "thereIsNoSavedVideos": "Сохранённых видео нет",
+  "thereIsNoSavedVideos": "저장한 동영상이 없어요",
   "@thereIsNoSavedVideos": {
     "description": "There are no saved videos found"
   },
-  "thereIsNoSavedOrHistoryVideos": "Сохранённых/просмотренных видео нет",
+  "thereIsNoSavedOrHistoryVideos": "저장한/기록된 동영상이 없어요",
   "@thereIsNoSavedHistoryVideos": {
     "description": "There are no saved or history videos"
   },
-  "noVideoAvailableChangedToHls": "Нет доступных форматов, переход на HLS",
+  "noVideoAvailableChangedToHls": "동영상 원본을 사용할 수 없어요. 자동으로 hls로 변경했어요",
   "@noVideoAvailableChangedToHls": {
     "description": "When there is no standard player link available, then it changed to hls player"
   },
-  "unknownQuality": "Качество не опознано",
+  "unknownQuality": "알 수 없는 화질",
   "@unknownQuality": {
     "description": "Quality name not found"
   },
-  "hlsPlayer": "Проигрыватель HLS",
+  "hlsPlayer": "Hls 재생기",
   "@hlsPlayer": {
     "description": "Hls player label"
   },
-  "enableHlsPlayerDescription": "Переключит на проигрыватель HLS, поддерживающий больше форматов. Отключите при ошибках.",
+  "enableHlsPlayerDescription": "HLS 재생기를 사용해 모든 화질 설정을 잠금 해제하세요. 오류가 발생한다면 사용 중지하세요.",
   "@enableHlsPlayerDescription": {
     "description": "Enabling HLS player may slow down performance but unlocks all quality options. Disable this setting if errors occur."
   },
-  "disableVideoHistory": "Отключить историю просмотров",
+  "disableVideoHistory": "동영상 기록 사용 중지",
   "@disableVideoHistory": {
     "description": "Hide watch history"
   },
-  "retrieveDislikes": "Вернуть дизлайки",
+  "retrieveDislikes": "싫어요 가져오기",
   "@retrieveDislikes": {
     "description": "Retrieve dislikes label"
   },
-  "retrieveDislikeCounts": "Запрашивать количество дизлайков",
+  "retrieveDislikeCounts": "싫어요 수를 가져와요",
   "@retrieveDislikeCounts": {
     "description": "Return the dislike button of videos"
   },
-  "noVideoDescription": "Без описания",
+  "noVideoDescription": "설명 없음",
   "@noVideoDescription": {
     "description": "There is no video description available"
   },
-  "relatedTitle": "Похожие",
+  "relatedTitle": "연관 동영상",
   "@relatedTitle": {
     "description": "Related videos label"
   },
-  "commentAuthorNotFound": "Не найден",
+  "commentAuthorNotFound": "찾지 못함",
   "@commentAuthorNotFound": {
     "description": "Name of the comment author is not found"
   },
-  "readMoreText": "Раскрыть",
+  "readMoreText": "더 읽기",
   "@readMoreText": {
     "description": "Expand the comment text"
   },
-  "showLessText": "Скрыть",
+  "showLessText": "덜 보기",
   "@showLessText": {
     "description": "Collapse the comment text"
   },
-  "commonSettingsTitle": "Общие",
+  "commonSettingsTitle": "공통 사항",
   "@commonSettingsTitle": {
     "description": "Common settings label"
   },
-  "language": "Язык",
+  "language": "언어",
   "@language": {
     "description": "Language label"
   },
-  "region": "Регион",
+  "region": "지역",
   "@region": {
     "description": "Region label"
   },
-  "theme": "Оформление",
+  "theme": "테마",
   "@theme": {
     "description": "Theme label"
   },
-  "developer": "Разработчик",
+  "developer": "개발자",
   "@developer": {
     "description": "Developer label"
   },
-  "translators": "Переводчики",
+  "translators": "번역가",
   "@translators": {
     "description": "Translators label"
   },
-  "version": "Версия",
+  "version": "버전",
   "@version": {
     "description": "Version label"
   },
-  "about": "О приложении",
+  "about": "정보",
   "@about": {
     "description": "About label"
   },
-  "video": "Видео",
+  "video": "동영상",
   "@video": {
     "description": "Video label"
   },
-  "unknown": "неизвестно",
+  "unknown": "알 수 없음",
   "@unknown": {
     "description": "Unknown label"
   },
-  "defaultQuality": "Качество по умолчанию",
+  "defaultQuality": "기본 화질",
   "@defaultQuality": {
     "description": "Default video quality label"
   },
-  "retry": "Повторить",
+  "retry": "재시도",
   "@retry": {
     "description": "Retry label"
   },
-  "repliesPlural": "{count, plural, =1{ответ} other{ответа}}",
+  "repliesPlural": "{count, plural, =1{답장} other{답장}}",
   "@repliesPlural": {
     "description": "{number} Replies"
   },
-  "canada": "Канада",
-  "france": "Франция",
-  "india": "Индия",
-  "netherlands": "Нидерланды",
-  "unitedKingdom": "Соединённое королевство",
-  "unitedStates": "Соединённые штаты Америки",
-  "distractionFree": "Отсекая лишнее",
+  "canada": "캐나다",
+  "france": "프랑스",
+  "india": "인도",
+  "netherlands": "네덜란드",
+  "unitedKingdom": "영국",
+  "unitedStates": "미국",
+  "distractionFree": "방해 요소 제거",
   "@distractionFree": {
     "description": "A section for control distracting elements."
   },
-  "hideComments": "Скрыть коментарии",
+  "hideComments": "댓글 숨기기",
   "@hideComments": {
     "description": "Hide Comments label."
   },
-  "hideCommentsButtonFromWatchScreen": "Убирает кнопку показа коментариев с экрана просмотра.",
+  "hideCommentsButtonFromWatchScreen": "시청 화면에서 댓글 버튼을 숨겨요",
   "@hideCommentsButtonFromWatchScreen": {
     "description": "Hide the comment button from video streaming screen."
   },
-  "hideRelated": "Скрыть похожие",
+  "hideRelated": "연관 동영상 숨기기",
   "@hideRelated": {
     "description": "Hide Related videos label."
   },
-  "hideRelatedVideosFromWatchScreen": "Убирает ленту похожих видео с экрана просмотра.",
+  "hideRelatedVideosFromWatchScreen": "시청 화면에서 연관 동영상을 숨겨요",
   "@hideRelatedVideosFromWatchScreen": {
     "description": "Hide the related videos from video streaming screen."
   },
-  "share": "Поделиться",
+  "share": "공유",
   "@share": {
     "description": "Share label."
   },
-  "includeTitle": "Включая название",
+  "includeTitle": "제목 포함",
   "@includeTitle": {
     "description": "Include title along with url"
   },
-  "instances": "Зеркала",
-  "switchRegion": "Возможно, стоит сменить регион, чтобы улучшить результат.",
+  "instances": "인스턴스",
+  "switchRegion": "더 나은 결과를 위해 다른 지역으로 전환하는 걸 고려해 주세요.",
   "swipeDownToDismissDisabled": "'Swipe down to dismiss' disabled",
   "swipeUpToDismissEnabled": "'Swipe up to dismiss' enabled",
   "noCommentsFound": "No Comments Found",
