Update source file intl_en.arb

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -63,7 +63,7 @@
   "@unknownQuality": {
     "description": "Quality name not found"
   },
-  "hlsPlayer": "HLS Player",
+  "hlsPlayer": "Hls Player",
   "@hlsPlayer": {
     "description": "Hls player label"
   },
